Set up homepage hero

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
     ></script>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>Hi there</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <h1>SARAH RUTH MIKULSKI</h1>
+      <img src="/images/Carousel.png" alt="Carousel" class="carousel-pic" />
+    </div>
+    <div class="homepage-text">
+      <h2>Actor and singer based in New York</h2>
+      <a href="#" class="btn btn-branding">Contact Me</a>
+    </div>
   </body>
 </html>
