--- a/index.html
+++ b/index.html
@@ -30,12 +30,49 @@
   </head>
   <body>
     <div class="hero">
-      <h1>SARAH RUTH MIKULSKI</h1>
+      <h1>Sarah Ruth Mikulski</h1>
       <img src="/images/Carousel.png" alt="Carousel" class="carousel-pic" />
     </div>
     <div class="homepage-text">
       <h2>Actor and singer based in New York</h2>
       <a href="#" class="btn btn-branding">Contact Me</a>
+      <div class="reviews">
+        <p class="review-1 review-text">
+          “A recent transplant to the Chicago area, Sarah Ruth Mikulski is a
+          real find. As The Sister, she has the most beautiful, crystal clear
+          soprano ever heard in this theatre, and this role is bound to be the
+          beginning of a successful musical career in the Windy City.”
+          <br />
+          <br />
+          <span class="author-fade"
+            >— Colin Douglas, Chicago Theatre Review</span
+          >
+        </p>
+        <p class="review-2 review-text">
+          "The surprise performance was his sister played by Sarah Mikulski, who
+          has the singing voice of an angel.""
+          <br />
+          <br />
+          <span class="author-fade"
+            >— Frank Meccia, Around The Town Chicago</span
+          >
+        </p>
+        <p class="review-3 review-text">
+          “It was no wonder that Sarah Ruth Mikulski, being seductively attired,
+          stole the show as well as the hearts of the jurymen and the judge. Her
+          stage presence and vocal ability were quite good.”
+          <br />
+          <br />
+          <span class="author-fade">— David DeVries, The Trumpet Bray </span>
+        </p>
+        <p class="review-4 review-text">
+          “Soprano Sarah Mikulski made a most effective Blonde both dramatically
+          and vocally; we enjoyed her sparring with Osmin.”
+          <br />
+          <br />
+          <span class="author-fade">— meche kroop, Voce di Meche</span>
+        </p>
+      </div>
     </div>
   </body>
 </html>
