Created gallery page

--- a/about.html
+++ b/about.html
@@ -87,21 +87,21 @@
           <img
             src="images/denimjHS.png"
             alt="Sarah Ruth Mikulski Headshot with denim jacket"
-            class="denim-hs"
+            class="denim-hs img-fluid"
           />
         </div>
         <div class="col-lg-4 d-flex">
           <img
             src="images/purpleHS.png"
             alt="Sarah Ruth Mikulski Headshot with purple tank top"
-            class="purple-hs"
+            class="purple-hs img-fluid"
           />
         </div>
         <div class="col-lg-4 d-flex">
           <img
             src="images/blacktankHS.png"
             alt="Sarah Ruth Mikulski Headshot with black tank top"
-            class="black-hs"
+            class="black-hs img-fluid"
           />
         </div>
       </div>
