Fixed homepage photo

--- a/gallery.html
+++ b/gallery.html
@@ -116,9 +116,9 @@
         </div>
         <div class="col-lg-6">
           <img
-            src="/images/carousel.png"
+            src="/images/carousel2.png"
             alt="Sarah Ruth Mikulski Carousel Samantha Annette Photography "
-            class="row-6 img-fluid images carousel"
+            class="row-6 img-fluid images carousel2"
           />
         </div>
       </div>
