--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
   <body>
     <div class="hero">
       <h1>Sarah Ruth Mikulski</h1>
-      <img src="/images/Carousel.png" alt="Carousel" class="carousel-pic" />
+      <img
+        src="/images/image 39.png"
+        alt="Carousel"
+        class="carousel-pic img-fluid"
+      />
     </div>
     <div class="homepage-text">
       <h3>Actor and singer based in New York</h3>
