--- a/media.html
+++ b/media.html
@@ -34,5 +34,43 @@
       <br />
       <h2 class="gallery-heading">Media</h2>
     </div>
+    <div class="container media-links">
+      <iframe
+        title="vimeo-player"
+        src="https://player.vimeo.com/video/810211126?h=83b7f62a20"
+        width="640"
+        height="360"
+        frameborder="0"
+        allowfullscreen
+        class="video-link"
+      ></iframe>
+      <iframe
+        title="vimeo-player"
+        src="https://player.vimeo.com/video/801393241?h=d05b919cdc"
+        width="640"
+        height="360"
+        frameborder="0"
+        allowfullscreen
+        class="video-link"
+      ></iframe>
+      <iframe
+        title="vimeo-player"
+        src="https://player.vimeo.com/video/810693347?h=b2b22c5dbb"
+        width="640"
+        height="360"
+        frameborder="0"
+        allowfullscreen
+        class="video-link"
+      ></iframe>
+      <iframe
+        title="vimeo-player"
+        src="https://player.vimeo.com/video/801401016?h=531c0dee37"
+        width="640"
+        height="360"
+        frameborder="0"
+        allowfullscreen
+        class="video-link"
+      ></iframe>
+    </div>
   </body>
 </html>
