Added contact page

--- a/about.html
+++ b/about.html
@@ -73,10 +73,15 @@
         <a
           href="https://www.instagram.com/sarahruthmikulski/"
           class="links instagram-link"
+          target="_blank"
         >
           <i class="fa-brands fa-instagram fa-xl"> </i>
         </a>
-        <a href="https://www.vimeo.com/user100546835" class="links vimeo-link">
+        <a
+          href="https://www.vimeo.com/user100546835"
+          class="links vimeo-link"
+          target="_blank"
+        >
           <i class="fa-brands fa-vimeo-v fa-xl"> </i>
         </a>
       </div>
