--- a/contact.html
+++ b/contact.html
@@ -34,5 +34,45 @@
       <br />
       <h2 class="gallery-heading">Contact Me</h2>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <img
+            src="/images/wings.png"
+            alt="Sarah Ruth Mikulski Grand Hotel"
+            class="img-fluid in-the-wings"
+          />
+        </div>
+        <div class="col-lg-6 contact-info">
+          <h4 class="contact-info">
+            <i class="fa-regular fa-envelope"></i> Email
+          </h4>
+          <p>
+            <a href="mailto:sarahruthmikulski@gmail.com" class="email-link">
+              sarahruthmikulski@gmail.com</a
+            >
+          </p>
+          <h4 class="contact-info"><i class="fa-solid fa-phone"></i> Phone</h4>
+          <p>(231)342-3090</p>
+        </div>
+      </div>
+      <div class="social-links text-center mt-5">
+        Follow me:
+        <a
+          href="https://www.instagram.com/sarahruthmikulski/"
+          class="links instagram-link"
+          target="_blank"
+        >
+          <i class="fa-brands fa-instagram fa-xl"> </i>
+        </a>
+        <a
+          href="https://www.vimeo.com/user100546835"
+          class="links vimeo-link"
+          target="_blank"
+        >
+          <i class="fa-brands fa-vimeo-v fa-xl"> </i>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
