Added navbar to all pages

--- a/about.html
+++ b/about.html
@@ -29,9 +29,34 @@
     ></script>
   </head>
   <body>
-    <div class="header">
-      <h1>Sarah Ruth Mikulski</h1>
-      <br />
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand header" href="/">Sarah Ruth Mikulski</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse justify-content-end"
+        id="navbarNavAltMarkup"
+      >
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/index.html">Home</a>
+          <a class="nav-item nav-link active" href="/about.html">About</a>
+          <a class="nav-item nav-link" href="/resume.html">Resume</a>
+          <a class="nav-item nav-link" href="/gallery.html">Gallery</a>
+          <a class="nav-item nav-link" href="/media.html">Media</a>
+          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
+    <div class="heading">
       <h2>About Me</h2>
     </div>
     <br />
