--- a/index.html
+++ b/index.html
@@ -29,17 +29,43 @@
     ></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand header" href="/">Sarah Ruth Mikulski</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse justify-content-end"
+        id="navbarNavAltMarkup"
+      >
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="/index.html">Home</a>
+          <a class="nav-item nav-link" href="/about.html">About</a>
+          <a class="nav-item nav-link" href="/resume.html">Resume</a>
+          <a class="nav-item nav-link" href="/gallery.html">Gallery</a>
+          <a class="nav-item nav-link" href="/media.html">Media</a>
+          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
-      <h1>Sarah Ruth Mikulski</h1>
       <img
         src="/images/image 39.png"
         alt="Carousel"
-        class="carousel-pic img-fluid"
+        class="carousel-pic img-fluid mt-2"
       />
     </div>
     <div class="homepage-text">
       <h3>Actor and singer based in New York</h3>
-      <a href="#" class="btn btn-branding">Contact Me</a>
+      <a href="/contact.html" class="btn btn-branding">Contact Me</a>
       <div class="reviews">
         <p class="review-1 review-text">
           “A recent transplant to the Chicago area, Sarah Ruth Mikulski is a
