--- a/gallery.html
+++ b/gallery.html
@@ -56,97 +56,120 @@
         </div>
       </div>
     </nav>
-    <div class="heading">
-      <h2 class="gallery-heading">Gallery</h2>
-    </div>
-    <div class="container photo-gallery">
-      <div class="row-1-photo">
-        <img
-          src="/images/greentankHS.png"
-          alt="Sarah Ruth Mikulski Headshot green tank top"
-          class="top-hs img-fluid green-hs mb-2"
-        />
+    <div class="container">
+      <div class="heading">
+        <h2 class="gallery-heading">Gallery</h2>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
+      <div class="container photo-gallery">
+        <div class="row-1-photo">
           <img
-            src="/images/cinderella.png"
-            alt="Sarah Ruth Mikulski Rodgers and Hammerstein's Cinderella Harpe Star"
-            class="row-2 img-fluid images cindy 2"
+            src="/images/greentankHS.png"
+            alt="Sarah Ruth Mikulski Headshot green tank top"
+            class="top-hs img-fluid green-hs mb-2"
           />
         </div>
-        <div class="col-lg-6">
-          <img
-            src="/images/threepenny1.png"
-            alt="Sarah Ruth Mikulski The Threepenny Opera Taylor Fiser Photography"
-            class="row-2 img-fluid images three-1"
-          />
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              src="/images/cinderella.png"
+              alt="Sarah Ruth Mikulski Rodgers and Hammerstein's Cinderella Harpe Star"
+              class="row-2 img-fluid images cindy 2"
+            />
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="/images/threepenny1.png"
+              alt="Sarah Ruth Mikulski The Threepenny Opera Taylor Fiser Photography"
+              class="row-2 img-fluid images three-1"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              src="/images/noahsflood.png"
+              alt="Sarah Ruth Mikulski Noah's Flood Opera Grand Rapids"
+              class="row-3 img-fluid images noah"
+            />
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="/images/catchmenurse.png"
+              alt="Sarah Ruth Mikulski Catch Me If You Can Miracle Productions"
+              class="row-3 img-fluid images catch-me"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              src="/images/godspell.png"
+              alt="Sarah Ruth Mikulski Godspell Miracle Productions"
+              class="row-4 img-fluid images godspell"
+            />
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="/images/Concert6.png"
+              alt="Sarah Ruth Mikulski 6 Concert Shoreline Theatrical Arts"
+              class="row-4 img-fluid images concert"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              src="/images/threepenny2.png"
+              alt="Sarah Ruth Mikulski The Threepenny Opera Taylor Fiser Photography"
+              class="row-5 img-fluid images three-2"
+            />
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="/images/curtains.png"
+              alt="Sarah Ruth Mikulski Curtains Miracle Productions"
+              class="row-5 img-fluid images curtains"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              src="/images/carmen.png"
+              alt="Sarah Ruth Mikulski Carmen Opera Grand Rapids"
+              class="row-6 img-fluid images carmen"
+            />
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="/images/carousel2.png"
+              alt="Sarah Ruth Mikulski Carousel Samantha Annette Photography "
+              class="row-6 img-fluid images carousel2"
+            />
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <img
-            src="/images/noahsflood.png"
-            alt="Sarah Ruth Mikulski Noah's Flood Opera Grand Rapids"
-            class="row-3 img-fluid images noah"
-          />
+      <footer class="footer-text mb-5 mt-5">
+        <div class="footer-links text-center">
+          <a
+            href="https://www.instagram.com/sarahruthmikulski/"
+            class="links instagram-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram fa-xl"> </i>
+          </a>
+          <a
+            href="https://www.vimeo.com/user100546835"
+            class="links vimeo-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-vimeo-v fa-xl"> </i>
+          </a>
         </div>
-        <div class="col-lg-6">
-          <img
-            src="/images/catchmenurse.png"
-            alt="Sarah Ruth Mikulski Catch Me If You Can Miracle Productions"
-            class="row-3 img-fluid images catch-me"
-          />
+        <div class="copyright">
+          <p>© 2023 Sarah Ruth Mikulski All rights reserved</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <img
-            src="/images/godspell.png"
-            alt="Sarah Ruth Mikulski Godspell Miracle Productions"
-            class="row-4 img-fluid images godspell"
-          />
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="/images/Concert6.png"
-            alt="Sarah Ruth Mikulski 6 Concert Shoreline Theatrical Arts"
-            class="row-4 img-fluid images concert"
-          />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <img
-            src="/images/threepenny2.png"
-            alt="Sarah Ruth Mikulski The Threepenny Opera Taylor Fiser Photography"
-            class="row-5 img-fluid images three-2"
-          />
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="/images/curtains.png"
-            alt="Sarah Ruth Mikulski Curtains Miracle Productions"
-            class="row-5 img-fluid images curtains"
-          />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <img
-            src="/images/carmen.png"
-            alt="Sarah Ruth Mikulski Carmen Opera Grand Rapids"
-            class="row-6 img-fluid images carmen"
-          />
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="/images/carousel2.png"
-            alt="Sarah Ruth Mikulski Carousel Samantha Annette Photography "
-            class="row-6 img-fluid images carousel2"
-          />
-        </div>
-      </div>
+      </footer>
     </div>
   </body>
 </html>
