--- a/index.html
+++ b/index.html
@@ -56,53 +56,76 @@
         </div>
       </div>
     </nav>
-    <div class="hero">
-      <img
-        src="/images/image 39.png"
-        alt="Carousel"
-        class="carousel-pic img-fluid mt-2"
-      />
-    </div>
-    <div class="homepage-text">
-      <h3>Actor and singer based in New York</h3>
-      <a href="/contact.html" class="btn btn-branding">Contact Me</a>
-      <div class="reviews">
-        <p class="review-1 review-text">
-          “A recent transplant to the Chicago area, Sarah Ruth Mikulski is a
-          real find. As The Sister, she has the most beautiful, crystal clear
-          soprano ever heard in this theatre, and this role is bound to be the
-          beginning of a successful musical career in the Windy City.”
-          <br />
-          <br />
-          <span class="author-fade"
-            >— Colin Douglas, Chicago Theatre Review</span
-          >
-        </p>
-        <p class="review-2 review-text">
-          "The surprise performance was his sister played by Sarah Mikulski, who
-          has the singing voice of an angel.""
-          <br />
-          <br />
-          <span class="author-fade"
-            >— Frank Meccia, Around The Town Chicago</span
-          >
-        </p>
-        <p class="review-3 review-text">
-          “It was no wonder that Sarah Ruth Mikulski, being seductively attired,
-          stole the show as well as the hearts of the jurymen and the judge. Her
-          stage presence and vocal ability were quite good.”
-          <br />
-          <br />
-          <span class="author-fade">— David DeVries, The Trumpet Bray </span>
-        </p>
-        <p class="review-4 review-text">
-          “Soprano Sarah Mikulski made a most effective Blonde both dramatically
-          and vocally; we enjoyed her sparring with Osmin.”
-          <br />
-          <br />
-          <span class="author-fade">— meche kroop, Voce di Meche</span>
-        </p>
+    <div class="container">
+      <div class="hero">
+        <img
+          src="/images/image 39.png"
+          alt="Carousel"
+          class="carousel-pic img-fluid mt-2"
+        />
       </div>
+      <div class="homepage-text">
+        <h3>Actor and singer based in New York</h3>
+        <a href="/contact.html" class="btn btn-branding">Contact Me</a>
+        <div class="reviews">
+          <p class="review-1 review-text">
+            “A recent transplant to the Chicago area, Sarah Ruth Mikulski is a
+            real find. As The Sister, she has the most beautiful, crystal clear
+            soprano ever heard in this theatre, and this role is bound to be the
+            beginning of a successful musical career in the Windy City.”
+            <br />
+            <br />
+            <span class="author-fade"
+              >— Colin Douglas, Chicago Theatre Review</span
+            >
+          </p>
+          <p class="review-2 review-text">
+            "The surprise performance was his sister played by Sarah Mikulski,
+            who has the singing voice of an angel.""
+            <br />
+            <br />
+            <span class="author-fade"
+              >— Frank Meccia, Around The Town Chicago</span
+            >
+          </p>
+          <p class="review-3 review-text">
+            “It was no wonder that Sarah Ruth Mikulski, being seductively
+            attired, stole the show as well as the hearts of the jurymen and the
+            judge. Her stage presence and vocal ability were quite good.”
+            <br />
+            <br />
+            <span class="author-fade">— David DeVries, The Trumpet Bray </span>
+          </p>
+          <p class="review-4 review-text">
+            “Soprano Sarah Mikulski made a most effective Blonde both
+            dramatically and vocally; we enjoyed her sparring with Osmin.”
+            <br />
+            <br />
+            <span class="author-fade">— meche kroop, Voce di Meche</span>
+          </p>
+        </div>
+      </div>
+      <footer class="footer-text mb-5 mt-5">
+        <div class="footer-links text-center">
+          <a
+            href="https://www.instagram.com/sarahruthmikulski/"
+            class="links instagram-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram fa-xl"> </i>
+          </a>
+          <a
+            href="https://www.vimeo.com/user100546835"
+            class="links vimeo-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-vimeo-v fa-xl"> </i>
+          </a>
+        </div>
+        <div class="copyright">
+          <p>© 2023 Sarah Ruth Mikulski All rights reserved</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
