--- a/media.html
+++ b/media.html
@@ -56,46 +56,69 @@
         </div>
       </div>
     </nav>
-    <div class="heading">
-      <h2 class="media-heading">Media</h2>
-    </div>
-    <div class="container media-links">
-      <iframe
-        title="vimeo-player"
-        src="https://player.vimeo.com/video/810211126?h=83b7f62a20"
-        width="640"
-        height="360"
-        frameborder="0"
-        allowfullscreen
-        class="video-link"
-      ></iframe>
-      <iframe
-        title="vimeo-player"
-        src="https://player.vimeo.com/video/801393241?h=d05b919cdc"
-        width="640"
-        height="360"
-        frameborder="0"
-        allowfullscreen
-        class="video-link"
-      ></iframe>
-      <iframe
-        title="vimeo-player"
-        src="https://player.vimeo.com/video/810693347?h=b2b22c5dbb"
-        width="640"
-        height="360"
-        frameborder="0"
-        allowfullscreen
-        class="video-link"
-      ></iframe>
-      <iframe
-        title="vimeo-player"
-        src="https://player.vimeo.com/video/801401016?h=531c0dee37"
-        width="640"
-        height="360"
-        frameborder="0"
-        allowfullscreen
-        class="video-link"
-      ></iframe>
+    <div class="container">
+      <div class="heading">
+        <h2 class="media-heading">Media</h2>
+      </div>
+      <div class="container media-links">
+        <iframe
+          title="vimeo-player"
+          src="https://player.vimeo.com/video/810211126?h=83b7f62a20"
+          width="640"
+          height="360"
+          frameborder="0"
+          allowfullscreen
+          class="video-link"
+        ></iframe>
+        <iframe
+          title="vimeo-player"
+          src="https://player.vimeo.com/video/801393241?h=d05b919cdc"
+          width="640"
+          height="360"
+          frameborder="0"
+          allowfullscreen
+          class="video-link"
+        ></iframe>
+        <iframe
+          title="vimeo-player"
+          src="https://player.vimeo.com/video/810693347?h=b2b22c5dbb"
+          width="640"
+          height="360"
+          frameborder="0"
+          allowfullscreen
+          class="video-link"
+        ></iframe>
+        <iframe
+          title="vimeo-player"
+          src="https://player.vimeo.com/video/801401016?h=531c0dee37"
+          width="640"
+          height="360"
+          frameborder="0"
+          allowfullscreen
+          class="video-link"
+        ></iframe>
+      </div>
+      <footer class="footer-text mb-5 mt-5">
+        <div class="footer-links text-center">
+          <a
+            href="https://www.instagram.com/sarahruthmikulski/"
+            class="links instagram-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram fa-xl"> </i>
+          </a>
+          <a
+            href="https://www.vimeo.com/user100546835"
+            class="links vimeo-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-vimeo-v fa-xl"> </i>
+          </a>
+        </div>
+        <div class="copyright">
+          <p>© 2023 Sarah Ruth Mikulski All rights reserved</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
