--- a/resume.html
+++ b/resume.html
@@ -56,22 +56,45 @@
         </div>
       </div>
     </nav>
-    <div class="heading">
-      <h2 class="resume-heading">Resume</h2>
-    </div>
     <div class="container">
-      <a
-        href="/images/SRM Resume 6.23.pdf"
-        alt="link to Sarah Ruth Mikulski Resume"
-        class="resume-pdf"
-        >Download Resume</a
-      >
+      <div class="heading">
+        <h2 class="resume-heading">Resume</h2>
+      </div>
+      <div class="container">
+        <a
+          href="/images/SRM Resume 6.23.pdf"
+          alt="link to Sarah Ruth Mikulski Resume"
+          class="resume-pdf"
+          >Download Resume</a
+        >
 
-      <img
-        src="/images/SRM Resume 6.23 photo.png"
-        alt="Sarah Ruth Mikulski Resume"
-        class="resume-photo mt-5"
-      />
+        <img
+          src="/images/SRM Resume 6.23 photo.png"
+          alt="Sarah Ruth Mikulski Resume"
+          class="resume-photo mt-5"
+        />
+      </div>
+      <footer class="footer-text mb-5 mt-5">
+        <div class="footer-links text-center">
+          <a
+            href="https://www.instagram.com/sarahruthmikulski/"
+            class="links instagram-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram fa-xl"> </i>
+          </a>
+          <a
+            href="https://www.vimeo.com/user100546835"
+            class="links vimeo-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-vimeo-v fa-xl"> </i>
+          </a>
+        </div>
+        <div class="copyright">
+          <p>© 2023 Sarah Ruth Mikulski All rights reserved</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
