--- a/about.html
+++ b/about.html
@@ -56,85 +56,109 @@
         </div>
       </div>
     </nav>
-    <div class="heading">
-      <h2>About Me</h2>
-    </div>
-    <br />
-    <div class="about-section container">
-      <div class="row">
-        <div class="col-lg-6 d-flex align-items-center">
-          <img
-            src="images/greentankHS.png"
-            alt="Sarah Ruth Mikulski Headshot with green tank top"
-            width="500px"
-            class="green-hs"
-          />
+    <div class="container">
+      <div class="heading">
+        <h2>About Me</h2>
+      </div>
+      <br />
+      <div class="about-section container">
+        <div class="row">
+          <div class="col-lg-6 d-flex align-items-center">
+            <img
+              src="images/greentankHS.png"
+              alt="Sarah Ruth Mikulski Headshot with green tank top"
+              width="500px"
+              class="green-hs"
+            />
+          </div>
+          <div class="col-lg-6 d-flex">
+            <p class="about-text">
+              NYC based singer and actor Sarah Ruth Mikulski grew up taking
+              dance class, singing “Mary Had a Little Lamb” on car rides, and
+              watching Julie Andrews movies on repeat. She fell in love with
+              Mary Poppins and Rodgers and Hammerstein musicals and knew she was
+              bound for the stage! She studied vocal performance at Western
+              Michigan University in Kalamazoo, MI where she received her
+              Bachelor of Music. Sarah moved to New York City and earned her
+              Master of Music in Vocal Performance at the Manhattan School of
+              Music. Sarah Ruth has performed with several musical theatre and
+              opera companies including White Plains Performing Arts Center,
+              Opera Grand Rapids, Cedar Rapids Opera Theatre, Shoreline
+              Theatrical Arts (Guilford, CT), Parallel 45 Theatre (Traverse
+              City, MI), College Light Opera Company (Falmouth, MA), Pride Arts
+              (Chicago, IL), Folks Operetta (Chicago, IL), and The Gilbert and
+              Sullivan Opera Company (Chicago, IL). She is on a quest to find
+              the best chocolate cake in the world (suggestions welcome!) and
+              has a hard time walking by any bakery without stopping for a
+              treat. If anyone knows of jobs that include endless dessert
+              tastings, let her know!
+            </p>
+          </div>
         </div>
-        <div class="col-lg-6 d-flex">
-          <p class="about-text">
-            NYC based singer and actor Sarah Ruth Mikulski grew up taking dance
-            class, singing “Mary Had a Little Lamb” on car rides, and watching
-            Julie Andrews movies on repeat. She fell in love with Mary Poppins
-            and Rodgers and Hammerstein musicals and knew she was bound for the
-            stage! She studied vocal performance at Western Michigan University
-            in Kalamazoo, MI where she received her Bachelor of Music. Sarah
-            moved to New York City and earned her Master of Music in Vocal
-            Performance at the Manhattan School of Music. Sarah Ruth has
-            performed with several musical theatre and opera companies including
-            White Plains Performing Arts Center, Opera Grand Rapids, Cedar
-            Rapids Opera Theatre, Shoreline Theatrical Arts (Guilford, CT),
-            Parallel 45 Theatre (Traverse City, MI), College Light Opera Company
-            (Falmouth, MA), Pride Arts (Chicago, IL), Folks Operetta (Chicago,
-            IL), and The Gilbert and Sullivan Opera Company (Chicago, IL). She
-            is on a quest to find the best chocolate cake in the world
-            (suggestions welcome!) and has a hard time walking by any bakery
-            without stopping for a treat. If anyone knows of jobs that include
-            endless dessert tastings, let her know!
-          </p>
+        <div class="social-links text-center">
+          Follow me:
+          <a
+            href="https://www.instagram.com/sarahruthmikulski/"
+            class="links instagram-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram fa-xl"> </i>
+          </a>
+          <a
+            href="https://www.vimeo.com/user100546835"
+            class="links vimeo-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-vimeo-v fa-xl"> </i>
+          </a>
         </div>
       </div>
-      <div class="social-links text-center">
-        Follow me:
-        <a
-          href="https://www.instagram.com/sarahruthmikulski/"
-          class="links instagram-link"
-          target="_blank"
-        >
-          <i class="fa-brands fa-instagram fa-xl"> </i>
-        </a>
-        <a
-          href="https://www.vimeo.com/user100546835"
-          class="links vimeo-link"
-          target="_blank"
-        >
-          <i class="fa-brands fa-vimeo-v fa-xl"> </i>
-        </a>
-      </div>
-    </div>
-    <div class="container about-photos">
-      <div class="row">
-        <div class="col-lg-4 d-flex">
-          <img
-            src="images/denimjHS.png"
-            alt="Sarah Ruth Mikulski Headshot with denim jacket"
-            class="denim-hs img-fluid"
-          />
-        </div>
-        <div class="col-lg-4 d-flex">
-          <img
-            src="images/purpleHS.png"
-            alt="Sarah Ruth Mikulski Headshot with purple tank top"
-            class="purple-hs img-fluid"
-          />
-        </div>
-        <div class="col-lg-4 d-flex">
-          <img
-            src="images/blacktankHS.png"
-            alt="Sarah Ruth Mikulski Headshot with black tank top"
-            class="black-hs img-fluid"
-          />
+      <div class="container about-photos">
+        <div class="row">
+          <div class="col-lg-4 d-flex">
+            <img
+              src="images/denimjHS.png"
+              alt="Sarah Ruth Mikulski Headshot with denim jacket"
+              class="denim-hs img-fluid"
+            />
+          </div>
+          <div class="col-lg-4 d-flex">
+            <img
+              src="images/purpleHS.png"
+              alt="Sarah Ruth Mikulski Headshot with purple tank top"
+              class="purple-hs img-fluid"
+            />
+          </div>
+          <div class="col-lg-4 d-flex">
+            <img
+              src="images/blacktankHS.png"
+              alt="Sarah Ruth Mikulski Headshot with black tank top"
+              class="black-hs img-fluid"
+            />
+          </div>
         </div>
       </div>
+      <footer class="footer-text mb-5 mt-5">
+        <div class="footer-links text-center">
+          <a
+            href="https://www.instagram.com/sarahruthmikulski/"
+            class="links instagram-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram fa-xl"> </i>
+          </a>
+          <a
+            href="https://www.vimeo.com/user100546835"
+            class="links vimeo-link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-vimeo-v fa-xl"> </i>
+          </a>
+        </div>
+        <div class="copyright">
+          <p>© 2023 Sarah Ruth Mikulski All rights reserved</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
