--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About Me - Sarah Ruth Mikulski NYC Actor</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,12 +47,27 @@
         id="navbarNavAltMarkup"
       >
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/index.html">Home</a>
-          <a class="nav-item nav-link active" href="/about.html">About</a>
-          <a class="nav-item nav-link" href="/resume.html">Resume</a>
-          <a class="nav-item nav-link" href="/gallery.html">Gallery</a>
-          <a class="nav-item nav-link" href="/media.html">Media</a>
-          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+          <a class="nav-item nav-link" href="/index.html" title="Homepage"
+            >Home</a
+          >
+          <a
+            class="nav-item nav-link active"
+            href="/about.html"
+            title="About Page"
+            >About</a
+          >
+          <a class="nav-item nav-link" href="/resume.html" title="Resume Page"
+            >Resume</a
+          >
+          <a class="nav-item nav-link" href="/gallery.html" title="Gallery Page"
+            >Gallery</a
+          >
+          <a class="nav-item nav-link" href="/media.html" title="Media Page"
+            >Media</a
+          >
+          <a class="nav-item nav-link" href="/contact.html" title="Contact Page"
+            >Contact</a
+          >
         </div>
       </div>
     </nav>
@@ -101,6 +116,7 @@
             href="https://www.instagram.com/sarahruthmikulski/"
             class="links instagram-link"
             target="_blank"
+            title="Sarah Ruth Mikulski's Instagram"
           >
             <i class="fa-brands fa-instagram fa-xl"> </i>
           </a>
@@ -108,6 +124,7 @@
             href="https://www.vimeo.com/user100546835"
             class="links vimeo-link"
             target="_blank"
+            title="Sarah Ruth Mikulski's Vimeo"
           >
             <i class="fa-brands fa-vimeo-v fa-xl"> </i>
           </a>
@@ -144,6 +161,7 @@
             href="https://www.instagram.com/sarahruthmikulski/"
             class="links instagram-link"
             target="_blank"
+            title="Sarah Ruth Mikulski's Instagram"
           >
             <i class="fa-brands fa-instagram fa-xl"> </i>
           </a>
@@ -151,6 +169,7 @@
             href="https://www.vimeo.com/user100546835"
             class="links vimeo-link"
             target="_blank"
+            title="Sarah Ruth Mikulski's Vimeo"
           >
             <i class="fa-brands fa-vimeo-v fa-xl"> </i>
           </a>
