--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Gallery - Sarah Ruth Mikulski NYC Actor</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,12 +47,27 @@
         id="navbarNavAltMarkup"
       >
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/index.html">Home</a>
-          <a class="nav-item nav-link" href="/about.html">About</a>
-          <a class="nav-item nav-link" href="/resume.html">Resume</a>
-          <a class="nav-item nav-link active" href="/gallery.html">Gallery</a>
-          <a class="nav-item nav-link" href="/media.html">Media</a>
-          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+          <a class="nav-item nav-link" href="/index.html" title="Homepage"
+            >Home</a
+          >
+          <a class="nav-item nav-link" href="/about.html" title="About Page"
+            >About</a
+          >
+          <a class="nav-item nav-link" href="/resume.html" title="Resume Page"
+            >Resume</a
+          >
+          <a
+            class="nav-item nav-link active"
+            href="/gallery.html"
+            title="Gallery Page"
+            >Gallery</a
+          >
+          <a class="nav-item nav-link" href="/media.html" title="Media Page"
+            >Media</a
+          >
+          <a class="nav-item nav-link" href="/contact.html" title="Contact Page"
+            >Contact</a
+          >
         </div>
       </div>
     </nav>
@@ -72,14 +87,14 @@
           <div class="col-lg-6">
             <img
               src="/images/cinderella.png"
-              alt="Sarah Ruth Mikulski Rodgers and Hammerstein's Cinderella Harpe Star"
+              alt="Sarah Ruth Mikulski as Ella in Rodgers and Hammerstein's Cinderella, Photo by Harpe Star"
               class="row-2 img-fluid images cindy 2"
             />
           </div>
           <div class="col-lg-6">
             <img
               src="/images/threepenny1.png"
-              alt="Sarah Ruth Mikulski The Threepenny Opera Taylor Fiser Photography"
+              alt="Sarah Ruth Mikulski as Lucy in The Threepenny Opera, Photo by Taylor Fiser Photography"
               class="row-2 img-fluid images three-1"
             />
           </div>
@@ -88,14 +103,14 @@
           <div class="col-lg-6">
             <img
               src="/images/noahsflood.png"
-              alt="Sarah Ruth Mikulski Noah's Flood Opera Grand Rapids"
+              alt="Sarah Ruth Mikulski as Mrs. Jaffett in Noah's Flood, Opera Grand Rapids"
               class="row-3 img-fluid images noah"
             />
           </div>
           <div class="col-lg-6">
             <img
               src="/images/catchmenurse.png"
-              alt="Sarah Ruth Mikulski Catch Me If You Can Miracle Productions"
+              alt="Sarah Ruth Mikulski as Cheryl Ann in Catch Me If You Can, Miracle Productions"
               class="row-3 img-fluid images catch-me"
             />
           </div>
@@ -104,14 +119,14 @@
           <div class="col-lg-6">
             <img
               src="/images/godspell.png"
-              alt="Sarah Ruth Mikulski Godspell Miracle Productions"
+              alt="Sarah Ruth Mikulski as Joanne in Godspell, Miracle Productions"
               class="row-4 img-fluid images godspell"
             />
           </div>
           <div class="col-lg-6">
             <img
               src="/images/Concert6.png"
-              alt="Sarah Ruth Mikulski 6 Concert Shoreline Theatrical Arts"
+              alt="Sarah Ruth Mikulski after 6 Concert, Shoreline Theatrical Arts"
               class="row-4 img-fluid images concert"
             />
           </div>
@@ -120,14 +135,14 @@
           <div class="col-lg-6">
             <img
               src="/images/threepenny2.png"
-              alt="Sarah Ruth Mikulski The Threepenny Opera Taylor Fiser Photography"
+              alt="Sarah Ruth Mikulski as Lucy in The Threepenny Opera, Photo by Taylor Fiser Photography"
               class="row-5 img-fluid images three-2"
             />
           </div>
           <div class="col-lg-6">
             <img
               src="/images/curtains.png"
-              alt="Sarah Ruth Mikulski Curtains Miracle Productions"
+              alt="Sarah Ruth Mikulski as Niki Harris in Curtains, Miracle Productions"
               class="row-5 img-fluid images curtains"
             />
           </div>
@@ -136,14 +151,14 @@
           <div class="col-lg-6">
             <img
               src="/images/carmen.png"
-              alt="Sarah Ruth Mikulski Carmen Opera Grand Rapids"
+              alt="Sarah Ruth Mikulski in Carmen, Opera Grand Rapids"
               class="row-6 img-fluid images carmen"
             />
           </div>
           <div class="col-lg-6">
             <img
               src="/images/carousel2.png"
-              alt="Sarah Ruth Mikulski Carousel Samantha Annette Photography "
+              alt="Sarah Ruth Mikulski as Carrie Pipperidge in Carousel, Photo by Samantha Annette Photography "
               class="row-6 img-fluid images carousel2"
             />
           </div>
@@ -155,6 +170,7 @@
             href="https://www.instagram.com/sarahruthmikulski/"
             class="links instagram-link"
             target="_blank"
+            title="Sarah Ruth Mikulski's Instagram"
           >
             <i class="fa-brands fa-instagram fa-xl"> </i>
           </a>
@@ -162,6 +178,7 @@
             href="https://www.vimeo.com/user100546835"
             class="links vimeo-link"
             target="_blank"
+            title="Sarah Ruth Mikulski's Vimeo"
           >
             <i class="fa-brands fa-vimeo-v fa-xl"> </i>
           </a>
