--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Sarah Ruth Mikulski is a New York City-based musical theatre actor."
+    />
+    <title>Homepage - Sarah Ruth Mikulski NYC Actor</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,12 +51,27 @@
         id="navbarNavAltMarkup"
       >
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/index.html">Home</a>
-          <a class="nav-item nav-link" href="/about.html">About</a>
-          <a class="nav-item nav-link" href="/resume.html">Resume</a>
-          <a class="nav-item nav-link" href="/gallery.html">Gallery</a>
-          <a class="nav-item nav-link" href="/media.html">Media</a>
-          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+          <a
+            class="nav-item nav-link active"
+            href="/index.html"
+            title="Homepage"
+            >Home</a
+          >
+          <a class="nav-item nav-link" href="/about.html" title="About Page"
+            >About</a
+          >
+          <a class="nav-item nav-link" href="/resume.html" title="Resume Page"
+            >Resume</a
+          >
+          <a class="nav-item nav-link" href="/gallery.html" title="Gallery Page"
+            >Gallery</a
+          >
+          <a class="nav-item nav-link" href="/media.html" title="Media Page"
+            >Media</a
+          >
+          <a class="nav-item nav-link" href="/contact.html" title="Contact Page"
+            >Contact</a
+          >
         </div>
       </div>
     </nav>
@@ -60,13 +79,15 @@
       <div class="hero">
         <img
           src="/images/image 39.png"
-          alt="Carousel"
+          alt="Sarah Ruth Mikulski as Carrie Pipperidge in Carousel with Shoreline Theatrical Arts"
           class="carousel-pic img-fluid mt-2"
         />
       </div>
       <div class="homepage-text">
         <h3>Actor and singer based in New York</h3>
-        <a href="/contact.html" class="btn btn-branding">Contact Me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact Page"
+          >Contact Me</a
+        >
         <div class="reviews">
           <p class="review-1 review-text">
             “A recent transplant to the Chicago area, Sarah Ruth Mikulski is a
@@ -111,6 +132,7 @@
             href="https://www.instagram.com/sarahruthmikulski/"
             class="links instagram-link"
             target="_blank"
+            title="Sarah Ruth Mikulski's Instagram"
           >
             <i class="fa-brands fa-instagram fa-xl"> </i>
           </a>
@@ -118,6 +140,7 @@
             href="https://www.vimeo.com/user100546835"
             class="links vimeo-link"
             target="_blank"
+            title="Sarah Ruth Mikulski's Vimeo Page"
           >
             <i class="fa-brands fa-vimeo-v fa-xl"> </i>
           </a>
