--- a/media.html
+++ b/media.html
@@ -133,7 +133,12 @@
           </a>
         </div>
         <div class="copyright">
-          <p>© 2023 Sarah Ruth Mikulski All rights reserved</p>
+          <p>
+            <a href="https://github.com/sarahruthmik/Portfolio-Project"
+              >Coded</a
+            >
+            by Sarah Ruth Mikulski © 2023 All rights reserved
+          </p>
         </div>
       </footer>
     </div>
